[B][I]Version 4.4.0[/I][/B]
- [NEW] Leia compatibility
- [NEW] Updated log viewer to use Estuary skin

[B][I]Version 4.3.3[/I][/B]
- [FIX] Code optimizations

[B][I]Version 4.3.2[/I][/B]
- [FIX] Even better unicode support
- [FIX] Minor tweaks

[B][I]Version 4.3.1[/I][/B]
- [FIX] Better unicode support
- [FIX] Obey all exclusions

[B][I]Version 4.3.0[/I][/B]
- [NEW] Krypton compatibility
- [NEW] Clean files that are not hard linked (mainly for seeding torrents)
- [NEW] Allow more excluded paths

[B][I]Version 4.2.1[/I][/B]
- [NEW] Krypton compatibility
- [NEW] Clean files that are not hard linked (mainly for seeding torrents)
- [NEW] Allow more excluded paths

[B][I]Version 4.2.1[/I][/B]
- [NEW] Improve exclusion checking by offloading to Kodi via JSON-RPC
- [FIX] Monitoring issues with running as service
- [FIX] Showing dialog with titles containing unicode characters

[B][I]Version 4.2.0[/I][/B]
- [NEW] Jarvis compatibility
- [NEW] Kodi File Cleaner is now known as Janitor
- [NEW] Manual cleaning now features a progress dialog that can be used to interrupt cleaning
- [FIX] Kodi library was not being cleaned after Janitor finished cleaning

[B][I]Version 4.1.0[/I][/B]
- [NEW] Helix compatibility
- [NEW] Show information dialogs when errors occur
- [NEW] Change name to Kodi File Cleaner
- [NEW] Kodi library cleaning occurs silently
- [NEW] Allow users to reset excluded paths by pressing a button
- [FIX] Fall back to copy and delete in case of permission problems
- [FIX] Log file was not being created automatically

[B][I]Version 4.0.1[/I][/B]
- [NEW] Specify whether to clean up or view log on manual run
- [FIX] A memory leak could occur when the user enabled deleting empty folders
- [FIX] Disabling the addon froze XBMC completely
- [FIX] Video library was not being cleaned up afterwards

[B][I]Version 4.0.0[/I][/B]
- [NEW] Gotham compatibility
- [NEW] Start addon manually
- [NEW] Allow disabling the service
- [NEW] Log file viewer (accessible from settings)